--- a/thawte-SSL.html
+++ b/thawte-SSL.html
@@ -875,10 +875,10 @@
     </section><!-- /Services Section -->
 
     <!-- 7 days offer -->
-    <div class="container-fluid offer_section_bg">
+    <div class="container-fluid offer_section_bg" data-aos="fade-up" data-aos-offset="200" data-aos-delay="60">
         <div class="container">
-            <div class="row py-5 " data-aos="fade-right" data-aos-offset="200" data-aos-delay="50">
-                <div class=" col-lg-10 m-auto">
+            <div class="row py-5 " >
+                <div class=" col-lg-12 ">
                     <div class="main_box-1">
                         <h2>7-Days Money-Back Guarantee</h2>
                         <p class="p-2">If you are not 100% satisfied, you can request a refund of your payment within 7 days after
@@ -903,8 +903,8 @@
 
     <!-- faq section -->
     <div class="container ">
-        <div class="row " data-aos="fade-left" data-aos-offset="200" data-aos-delay="50">
-            <div class=" col-lg-10 col-sm-10 m-auto price_end">
+        <div class="row " data-aos="fade-up" data-aos-offset="200" data-aos-delay="70">
+            <div class=" col-lg-12 col-sm-12  price_end">
                 <div>
                     <h4>Thawte SSL Certificates FAQs</h4>
                     <!-- <p>
